[workspace]
default-members = [
    "rusvid_cli",
]
members = [
    "examples/black_video",
    "examples/comp_effect",
    "examples/grid",
    "examples/layers",
    "examples/read_svg_file",
    "examples/simple_animation",
    "examples/simple_path",
    "rusvid_lib",
    "rusvid_cli",
    "crates/*",
]

[workspace.dependencies]
anyhow = "1.0.66"
image = { version = "0.24", default-features = false }
resvg = { version = "0.28.0", default-features = false }
