[workspace]
default-members = ["rusvid_cli"]
members = ["rusvid_lib", "rusvid_cli", "crates/*"]

[workspace.dependencies]
anyhow = "1.0.66"
image = { version = "0.24", default-features = false }
resvg = { version = "0.28.0", default-features = false }
thiserror = "1.0.38"

[workspace.package]
version = "0.2.1"
license = "Apache-2.0"
repository = "https://github.com/LetsMelon/rusvid"
