[package]
name = "rusvid_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusvid_lib = { path = "../rusvid_lib"}
resvg = "0.23.0"
tiny-skia = "0.6.5"
usvg = "0.23.0"
debug-ignore = "1.0.2"
anyhow = "1.0.58"
