[package]
name = "rusvid_cli"
edition = "2021"

version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chrono = "0.4.24"
fern = "0.6.1"
log = "0.4"
rusvid_lib = { path = "../rusvid_lib", version = "0.2.0", features = [
    "remote_renderer",
    "save_load",
] }
