[package]
name = "rusvid_file"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
rusvid_lib = { path = "../rusvid_lib", version = "0.2.1" }
serde = "1.0.158"
serde_yaml = "0.9.19"
