[package]
name = "rusvid_lib"
edition = "2021"
description = "SVG animator-library written in Rust"
readme = "../README.md"
keywords = ["svg", "graphics", "animation"]
documentation = "https://docs.rs/rusvid_lib/"

version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
easer = "0.3.0"
glam = { version = "0.22.0", features = ["approx"] }
itertools = "0.10.5"
log = "0.4"
rayon = "1.6.1"
resvg = { workspace = true }
rusvid_core = { path = "../crates/core", version = "0.2.0" }
rusvid_effect = { path = "../crates/effect", version = "0.2.0" }
rusvid_video_encoder = { path = "../crates/video_encoder", version = "0.2.0" }

[dev-dependencies]
approx = "0.5.1"
