[package]
name = "rusvid_lib"
edition = "2021"
description = "SVG animator-library written in Rust"
readme = "../README.md"
keywords = ["svg", "graphics", "animation"]
documentation = "https://docs.rs/rusvid_lib/"

version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
easer = "0.3.0"
glam = { version = "0.22.0", features = ["approx"] }
itertools = "0.10.5"
log = "0.4"
paste = "1.0.12"
rayon = "1.7.0"
reqwest = { version = "0.11.16", optional = true, features = [
    "blocking",
    "multipart",
    "json",
    "gzip",
] }
rusvid_core = { path = "../crates/core", version = "0.2.0" }
rusvid_effect = { path = "../crates/effect", version = "0.2.0" }
rusvid_video_encoder = { path = "../crates/video_encoder", version = "0.2.0" }
serde = { version = "1.0.159", optional = true }
serde_yaml = { version = "0.9.21", optional = true }
static_assertions = "1.1.0"
tempfile = { version = "3.5.0", optional = true }

[dev-dependencies]
approx = "0.5.1"

[features]
default = []
serde = ["serialize", "deserialize"]
serialize = ["dep:serde", "rusvid_core/serialize"]
deserialize = ["dep:serde", "rusvid_core/deserialize"]
remote_renderer = [
    "dep:reqwest",
    "dep:serde_yaml",
    "dep:tempfile",
    "rusvid_core/server",
    "serialize",
]
