[package]
name = "rusvid_lib"
edition = "2021"
description = "SVG animator-library written in Rust"
readme = "../README.md"
keywords = ["svg", "graphics", "animation"]
documentation = "https://docs.rs/rusvid_lib/"

version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bincode = { version = "1.3.3", optional = true }
easer = "0.3.0"
glam = { version = "0.22.0", features = ["approx"] }
itertools = "0.10.5"
log = "0.4"
mime = { version = "0.3.17", optional = true }
miniz_oxide = { version = "0.7.1", optional = true, features = ["std"] }
multipart = { version = "0.18.0", optional = true, default-features = false, features = [
    "client",
] }
paste = "1.0.12"
rayon = "1.7.0"
rusvid_core = { path = "../crates/core", version = "0.2.0" }
rusvid_effect = { path = "../crates/effect", version = "0.2.0" }
rusvid_video_encoder = { path = "../crates/video_encoder", version = "0.2.0" }
serde = { version = "1.0.159", optional = true }
serde_yaml = { version = "0.9.21", optional = true }
static_assertions = "1.1.0"
ureq = { version = "2.6.2", optional = true, features = ["json"] }
url = { version = "2.3.1", optional = true }

[dev-dependencies]
approx = "0.5.1"

[features]
default = []

serde = ["serialize", "deserialize"]
serialize = ["dep:serde", "rusvid_core/serialize"]
deserialize = ["dep:serde", "rusvid_core/deserialize"]

remote_renderer = [
    "dep:mime",
    "dep:multipart",
    "dep:serde_yaml",
    "dep:ureq",
    "dep:url",
    "rusvid_core/server",
    "serialize",
]

save_load = ["dep:bincode", "dep:miniz_oxide", "serde"]
