[package]
name = "rusvid_server"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["multipart"] }
derive_more = "0.99.17"
fern = "0.6.2"
log = "0.4.17"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
# redis = { version = "0.22.3", features = ["tokio-comp"] }
r2d2_redis = "0.14.0"
rust-s3 = "0.32.3"
rusvid_lib = { path = "../rusvid_lib", version = "0.2.1", features = ["serde"] }
serde = "1.0.158"
serde_json = "1.0.95"
serde_yaml = "0.9.19"
thiserror.workspace = true
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = "0.7.7"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }

[profile.dev.package.rusvid_lib]
opt-level = 3
