[package]
name = "rusvid_server"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["multipart"] }
derive_more = "0.99.17"
r2d2 = "0.8.10"
redis = { version = "0.23.0", features = ["tokio-comp", "r2d2"] }
rust-s3 = "0.32.3"
rusvid_core = { path = "../crates/core", version = "0.2.1", features = [
    "server",
    "redis",
] }
rusvid_lib = { path = "../rusvid_lib", version = "0.2.1", features = ["serde"] }
serde = "1.0.158"
serde_json = "1.0.95"
serde_yaml = "0.9.19"
thiserror.workspace = true
tokio = { version = "1.28.0", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "parking_lot",
] }
tokio-util = "0.7.7"
tower = { version = "0.4.13" }
tower-http = { version = "0.4.0", features = [
    "compression-full",
    "cors",
    "decompression-full",
    "limit",
    "trace",
] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[profile.release]
lto = true
