[package]
name = "rusvid_collectione"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusvid_core = { path = "../core" }
anyhow = { workspace = true }
tiny-skia = { workspace = true }
usvg = { workspace = true }
resvg = { workspace = true }
image = { workspace = true, features = ["jpeg"] }
