[package]
name = "rusvid_core"
edition = "2021"
description = "Core library for rusvid"
readme = "../../README.md"
keywords = ["svg", "graphics", "animation"]
documentation = "https://docs.rs/rusvid_core/"

version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
concat-idents = "1.1.4"
# TODO Maybe replace flo_curve with 'kurbo'
flo_curves = "0.6.1"
geo = "0.24.1"
glam = { version = "0.22.0", features = ["approx"] }
image = { version = "0.24", features = ["bmp", "jpeg"] }
paste = "1.0.12"
png = "0.17.7"
resvg = { version = "0.29.0", default-features = false }
rhai = { version = "1.12.0", optional = true }
static_assertions = "1.1.0"
thiserror = { workspace = true }
uuid = { version = "1.2.2", default-features = false, features = [
    "v4",
    "fast-rng",
    "js",
] }

[dev-dependencies]
anyhow = { workspace = true }
image-compare = "0.2.3"
itertools = "0.10.5"

[features]
scripting = ["dep:rhai"]
