[package]
name = "rusvid_effect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
itertools = "0.10.5"
log = "0.4.17"
rusvid_core = { path = "../core" }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench_simd"
harness = false
