[package]
name = "rusvid_plane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
image = { version = "0.24.4", default-features = false, optional = true }

[features]
default = ["rgba_image"]
rgba_image = ["dep:image"]
unsafe = []
