[package]
name = "rusvid_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.63"
rusvid_core = { path = "../core" }
js-sys = "0.3.60"
lazy_static = "1.4.0"
web-sys = { version = "0.3.60", features = [ "console" ] }
