[package]
name = "what_the_rast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusvid_core = { path = "../core" }
anyhow = "1.0.66"
tiny-skia = "0.6.5"
usvg = "0.23.0"
resvg = "0.23.0"
image = "0.24"
