[package]
name = "read_svg_file"
edition = "2021"

version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusvid_lib = { path = "../../rusvid_lib", version = "0.2.0" }
