[package]
name = "example_simple_path"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusvid_lib = { path = "../../rusvid_lib" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
